--- a/package.json
+++ b/package.json
@@ -4,7 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf dist/",
+    "build-tsc": "npm run clean && tsc",
+    "watch-tsc": "npm run clean && tsc -w",
+    "test": "jest --forceExit --coverage --verbose",
+    "watch-test": "npm run test -- --watchAll",
+    "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
+    "serve-debug": "NODE_ENV=local nodemon --inspect dist/index.js",
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-tsc\" \"npm run serve-debug\"",
+    "prepare": "husky install",
+    "build-eslint": "npm run clean && esbuild src/index.ts --bundle --minify --sourcemap --platform=node --target=es2020 --outfile=dist/index.js",
+    "postbuild-eslint": "cd dist && zip -r index.zip index.js*"
   },
   "repository": {
     "type": "git",
